# CryptoDataEngine

./: .gitignore  README.md
cpp_engine/: CMakeLists.txt
cpp_engine/include/: Constants.h  DataIngestor.h  Persistence.h  ProcessingThread.h  SafeQueue.h  TickerData.h
cpp_engine/src/: DataIngestor.cpp  Persistence.cpp  ProcessingThread.cpp  TickerData.cpp  main.cpp
db_setup/: schema.sql
python_scripts/analytics/: data_analyzer.py
python_scripts/feed_client/: binance_data_fetcher.py
